examples/manifests/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-istio
  namespace: gateway
spec:
  type: ClusterIP # kpt-set: ${gateway_service_type}
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    istio.io/gateway-name: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-istio
  namespace: gateway
spec:
  selector:
    matchLabels:
      istio.io/gateway-name: gateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio.io/gateway-name: gateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: auto
        name: istio-proxy
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsGroup: 1337
          runAsUser: 1337
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: gateway
spec:
  # point gateway to the above service definition
  addresses:
  - value: gateway-istio
    type: Hostname
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
