examples/manifests/crawler.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: crawler
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler
  namespace: crawler
spec:
  selector:
    matchLabels:
      app: crawler
  template:
    metadata:
      labels:
        app: crawler
    spec:
      containers:
      - name: crawler
        image: crawler:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: crawler
  namespace: crawler
spec:
  selector:
    app: crawler
  ports:
  - name: http
    port: 8080
    targetPort: http
    protocol: TCP
    appProtocol: http
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: crawler
  namespace: crawler
spec:
  parentRefs:
  - name: gateway
    namespace: gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /crawler
    backendRefs:
    - name: crawler
      port: 8080
